name:                my-wiki
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/my-wiki#readme
license:             BSD3
license-file:        LICENSE
author:              bibaijin
maintainer:          bibaijin@gmail.com
copyright:           2017 bibaijin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable my-wiki
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.9.3.0,
                       containers == 0.5.7.1,
                       pandoc == 1.19.1
